# ChangeLog for dev-ruby/thread_safe
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/thread_safe/ChangeLog,v 1.3 2013/08/02 05:57:54 mrueg Exp $

  02 Aug 2013; Manuel Rüger <mrueg@gentoo.org> -thread_safe-0.1.0.ebuild,
  thread_safe-0.1.2.ebuild:
  Add missing dep, thanks to Jonathan Geisler. Fixes bug #479336. Cleanup.

*thread_safe-0.1.2 (25 Jul 2013)

  25 Jul 2013; Manuel Rüger <mrueg@gentoo.org> +thread_safe-0.1.2.ebuild:
  Version bump

*thread_safe-0.1.0 (26 Dec 2012)

  26 Dec 2012; Hans de Graaff <graaff@gentoo.org> +thread_safe-0.1.0.ebuild,
  +metadata.xml:
  Initial import. Dependency for forthcoming dev-ruby/rails:4.