@@ -1,4 +1,6 @@
 DIST thread_safe-0.1.2.gem 136704 SHA256 7e2b957c28f2676b0a5ba5c0ad3a92988887922edfcb7be66acac6106881beaf SHA512 87ad4d7cc2d0f4fd784417c56a22f9a2be93a5b783914246e9c638f7c8327b0528e7df2be30318b109b3f810674c844e1e96d6c3f4d92465bf921f9d21878c66 WHIRLPOOL 851993483a932f53f2d441c5b2e08094963dbcf4411508af52106e7ec57a68305b60729ccea64b1644830abdd076b29f5bb4aebd96110e87f7ef12de8787ebc3
+DIST thread_safe-0.1.3.gem 136704 SHA256 f8b9f8db0889aa97676b4a1efe919b1e76601ed9c9662a986825755bba305c38 SHA512 ef54d618a3de34716705d23081dbc325031be33dd6819f28b3601bbc62da4c79d4ae0c5dcad5490efa25f998184509b672be3b6f223fbfc9505d64a7c217c3cb WHIRLPOOL 5ea88ad1b8f15d9472b5d5eeaf21c9e23f85d50381ace20d4243ff19165dde80ac95d3f9990a95d88614d15b2d7828ddc7acd37e5a39c34008c7a3a0a97459b2
 EBUILD thread_safe-0.1.2.ebuild 695 SHA256 51bb66bacf6d965177ef22af4e2ebc5a394099529a384660ed084fa152a77a86 SHA512 9b3f1318cdc8faa943acedc6e9a4240f11e2f5acad4442740edffa11d4ee981df093813abaec632298ddf194706fd48494283125144b4e8e0242f5594b37dc50 WHIRLPOOL 5d788d267ebdcbe6ac9e37557ef2a4a5fc71e6cc5ebb287bdb2e74007563199eb65a67e1257f468bf640fae2ca5cacbbee412eb6d59b27dfc7a6a3d6bab95714
-MISC ChangeLog 707 SHA256 e104f97076ba0d1f87635eacbb5a235161b83d83baef920d8b2d8219920b9a4d SHA512 eacb5b500a02396fbea46c45a7eead8f51a200db77d9ef5a117fcb524c4d179cb82e3ab8d8cc94949029306858b89a6266355e51786c8df30aad7b75753f94ba WHIRLPOOL b1009a1f1c8dc3ee235afaebb351b4c2834405c1eaf75bcca934a56cf0e5350850562f6ed5ec2acf34bcb0a01b7ed6215ca5dc45dcfc6098d7052da4efe7ef2d
+EBUILD thread_safe-0.1.3.ebuild 634 SHA256 ea4952e4ee398acd916458b11b40fcf41b00ea233a5d0e7dbff6a39467329eac SHA512 37c5f27899a61702b075995f6c701a0e7ea1f046b2e5de1d6e6789954530b39bd8354e8760b45e627b9785537d494e032bd6d5e0e2320450d5791e7e252b6bca WHIRLPOOL 2d1f5ad56fb19559ba344bbd579e6a8f573de228d7f0015bda8163a542f83b85c8e642c7b02d8dc979bffd8f06a7851af86fa696e5775f632a23d5a1cb5e3215
+MISC ChangeLog 833 SHA256 62ad3d1784c6ec51bf547d812022efb04df6e99b0c4dcb500ca8f0610fac2b0f SHA512 bcc3d25567ed8384627ed5a06c80e63f143d1725261ffa1df2bb44c8bb53170e878ad3fdeeedc945c1632bc58ec9bbff0fe690ee9652f4a13f1a4736d4389d19 WHIRLPOOL abed4d059b3e3d05d975581b8d9b8488cad7ef4c863dd656105c5979910e6e23e1cd4c3fc2fa1485b9a448745bca0a97e619c1bed2ea18e3ec33a0cecf425d54
 MISC metadata.xml 157 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c SHA512 0cec73b966de88015ea4c7212723d848d367608aa93658bb945f298a8000c4ba8aba73c9eb8481859fb5bbed45e80dae32c628caf81e027a4ad8eafa7e632851 WHIRLPOOL 4da25c81e21173ad8b7b5f35b056264869d9a16741062aa4422c5ea1aa9e73da8eb700b0d54de84c169d702fbb3f41ed157c9dc7c9daac110849ae84715c051b
