@@ -1,6 +1,11 @@
 # ChangeLog for dev-ruby/thread_safe
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/thread_safe/ChangeLog,v 1.3 2013/08/02 05:57:54 mrueg Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/thread_safe/ChangeLog,v 1.4 2013/09/11 13:02:11 mrueg Exp $
+
+*thread_safe-0.1.3 (11 Sep 2013)
+
+  11 Sep 2013; Manuel Rüger <mrueg@gentoo.org> +thread_safe-0.1.3.ebuild:
+  Version bump.
 
   02 Aug 2013; Manuel Rüger <mrueg@gentoo.org> -thread_safe-0.1.0.ebuild,
   thread_safe-0.1.2.ebuild:
